--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
-  "name": "app.js",
+  "name": "header_parser",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.15.4"
-  }
+  "license": "ISC"
 }
